# EaSync

./: .gitattributes  .gitignore  .gitmodules  .metadata  README.md  README_RUN.md  analysis_options.yaml  assistantDataset.txt  easync-full-log.txt  flutter-logs.txt  interactions.txt  pubspec.yaml  vocab.json
.github/: copilot-instructions.md
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/easync/: MainActivity.kt
android/app/src/main/kotlin/com/nortify/easync/: MainActivity.kt
android/app/src/main/res/values/: colors.xml
assets/: acs.json  curtains.json  fridges.json  heated_floors.json  lamps.json  locks.json  mocks.json
docs/: ANDROID_BUILD_FIX.md  Q4_CONVERT.md  Q4_GPTQ.md  QUANTIZE.md  README.md  README_RUN.md  architecture.md  architecture_en.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: 03.txt  CMakeLists.txt  build.sh  curtains.json  ffi.dart  fridges.json  heated_floors.json  lamps.json  main.dart
lib/ai/: CMakeLists.txt  README.md  schemas.json
lib/ai/data/: behaviorPatternDataset.jsonl  chatDatasetV2.jsonl  chatUnderstandingDataset.jsonl  config.json  corpus.txt  dataGuide.md  generateAiDatasets.py  generateDataset.py  generation_config.json  interactions.json  model.gguf  model.onnx  model.onnx.data  model.safetensors  sglm_model.pt  special_tokens_map.json  tokenizer.model  tokenizer.vocab  tokenizer_config.json
lib/ai/include/: SGLM.hpp  actionDecoder.hpp  aiEngine.hpp  attention.hpp  chatCommandRouter.hpp  chatModel.hpp  chatModelRuntime.hpp  contextEncoder.hpp  engine.hpp  feedForward.hpp  hybridModel.hpp  memory.hpp  moe.hpp  tokenizer.hpp  toolRouter.hpp  transformer.hpp
lib/ai/models/: actionDecoder.cpp  attention.cpp  chatInference.py  chatInferenceCli.py  chatModel.pth  chatModel.py  chatModelLabelMaps.json  chatModelVocab.json  chatTokenizer.py  evaluateChatModel.py  feedForward.cpp  hybridChatModel.py  hybridModel.cpp  infer.cpp  intentClassifier.cpp  moe.cpp  patternsModel.py  patternsModelMaps.json  sglm.pth  sglm_best.pth  tokenizer.cpp  trainChatModel.py  trainPatternsModel.py  train_and_export.py  transformer.cpp
lib/ai/models/artifacts/chat/: chatModel.pt  labelMaps.json  vocab.json
lib/ai/models/artifacts/patterns/: patternsModel.pt
lib/ai/src/: SGLM.cpp  SGLM.py  SGLMLite.py  aiEngine.cpp  chat.cpp  chat.py  chatCommandRouter.cpp  chatModel.cpp  chatModelRuntime.cpp  convert.py  debug.py  distille.py  engine.cpp  exportToOnnx.py  loadTeacher.py  model.py  service.py  sglmLite.pt  tokenizer.cpp  train.py  verifyDims.py
lib/ai/tools/: compare_inference.py  q4_pipeline.sh  quantize_model.py
lib/ai/utils/: buildVocab.cpp  datasetCleaner.cpp  datasetGenerator.cpp  evaluate.cpp  quantize.cpp  train.cpp
lib/core/: CMakeLists.txt  build.sh  build_test  is_core_ok
lib/core/drivers/: ble.cpp  ble.hpp  driver.hpp  mock.cpp  mock.hpp  mqtt.cpp  mqtt.hpp  wifi.cpp  wifi.hpp  zigbee.cpp  zigbee.hpp
lib/core/include/: adaptiveLayer.hpp  adaptive_layer.hpp  core.h  device.h  driver.h  event.h  payloadUtility.hpp  payload_service.hpp  payload_utility.hpp
lib/core/src/: adaptiveLayer.cpp  adaptive_layer.cpp  bridge.cpp  core.cpp  driver.cpp  payloadUtility.cpp  payload_service.cpp  payload_utility.cpp
lib/core/tests/: core_integration.cpp  core_ok.cpp  is_core_ok
lib/models/: capability.dart  device.dart  groups.dart  mode.dart
lib/services/: capabilityResolver.dart  deviceRepository.dart  persistence.dart
lib/state/: deviceStore.dart  groupStore.dart  modeStore.dart
lib/theme/: appTheme.dart
lib/ui/: account.dart  agent.dart  assistant.dart  assistant_chat.dart  bridge.dart  bridgeTest.dart  bridge_test.dart  dashboard.dart  ffi.dart  handler.dart  home.dart  i18n.dart  legalConsent.dart  legal_consent.dart  main.dart  manage.dart  profiles.dart  settings.dart  splash.dart  theme.dart
lib/ui/auth/: config.dart  provider.dart  security.dart  service.dart  tokenStore.dart  userProfile.dart
lib/ui/config/: config.dart  iconCatalog.dart
lib/ui/config/dialogs/: createGroupDialog.dart  createModeDialog.dart
lib/ui/config/sections/: appPreferences.dart  devicesConfig.dart  groupConfig.dart  modesConfig.dart
lib/ui/dialogs/: acDialog.dart  curtainDialog.dart  deviceDialog.dart  fridgeDialog.dart  lightDialog.dart  lockDialog.dart
lib/ui/home/: deviceGrid.dart  header.dart  home.dart  modeBar.dart
lib/ui/utils/: bridge.dart  downloader.dart  navigator.dart  plan.dart  recommendationToastHost.dart  skeleton.dart  toastHost.dart  trustedPresence.dart
lib/ui/widgets/: capabilityChip.dart  deviceCard.dart  draggableGrid.dart  emptyState.dart  groupSelector.dart  iconSelector.dart  modeQuickAction.dart  section.dart  sectionHeder.dart  skeleton.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: backend_smoke_test.dart
tools/: cleanup_comments.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp  utils.cpp  win32_window.cpp
